--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
       <img src="./Images/AC IMG.JPG" class="rounded-circle mx-auto d-block" style="height: 300px;" alt="">
    <h1 class="text-white text-center mt-2">ARITRI CHOWDHURY</h1>
    <h4 class="text-warning text-center m-2">BIO</h4>
-   <P class="bg-secondary text-white m-2 p-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum alias consequatur officia aut enim, rerum facilis perferendis minima, facere suscipit magnam rem numquam soluta sapiente provident accusamus, perspiciatis eveniet error ullam ea iure esse voluptate voluptas. Veniam eveniet enim, eligendi error perferendis dolore amet fugit, ipsam corrupti possimus laboriosam eos.</P>
+   <P class="bg-secondary text-white m-2 p-2"> dolor sit amet consectetur adipisicing elit. Illum alias consequatur officia aut enim, rerum facilis perferendis minima, facere suscipit magnam rem numquam soluta sapiente provident accusamus, perspiciatis eveniet error ullam ea iure esse voluptate voluptas. Veniam eveniet enim, eligendi error perferendis dolore amet fugit, ipsam corrupti possimus laboriosam eos.</P>
     </div><!---cotainer div ends-->
 </section>
 <!----Bio ends-->
