--- a/blogPort.html
+++ b/blogPort.html
@@ -51,7 +51,7 @@
             <img src="./Images/coffee.jpg" class="card-img-top" style="height:400px" alt="...">
             <div class="card-body bg-secondary text-white">
               <h4 class="card-title text-center">CAPPUCINO</h4>
-              <p class="card-text text-justify">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur vitae placeat ipsam dolore alias necessitatibus quos commodi minima quaerat ratione deserunt corrupti rerum, illum aut earum. Explicabo assumenda quos, eveniet reiciendis voluptas voluptate sapiente impedit accusamus quae. Necessitatibus rem, itaque odio sapiente exercitationem repudiandae, totam magnam nemo eligendi maiores nam!</p>
+              <p class="card-text text-justify"> dolor sit amet consectetur adipisicing elit. Tenetur vitae placeat ipsam dolore alias necessitatibus quos commodi minima quaerat ratione deserunt corrupti rerum, illum aut earum. Explicabo assumenda quos, eveniet reiciendis voluptas voluptate sapiente impedit accusamus quae. Necessitatibus rem, itaque odio sapiente exercitationem repudiandae, totam magnam nemo eligendi maiores nam!</p>
             </div>
           </div><!---card1 div ends-->
         </div><!---column1 div ends-->
