--- a/contact.html
+++ b/contact.html
@@ -40,12 +40,17 @@
 <!----contact starts-->
 <section class="my-3 text-center">
     <div class="container">
-      <div class="title text-center text-white bg-success m-2 d-inline-flex">
-          <h2 class="font-weight-bolder">CONTACT ME</h2>
-
-        </div><!----title div ends-->
+      <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-3">
+          <h2 class="font-weight-boldertext-center text-white bg-success m-2 d-inline-flex ">CONTACT ME</h2>
+        </div>
+        <div class="col-sm-3"></div>
+      </div><!---row1 div ends-->
+      
         <div class="row">
-            <div class="col-8 bg-success m-2">
+          <div class="col-sm-3"></div>
+            <div class="col-sm-3 bg-success m-2">
               <h4 class="text-white"> Way to reach me:</h4>
               <div class="mb-3 mt-3 text-white">
                   <label for="input-group-text" class="form-label">FULL NAME </label>
@@ -70,6 +75,7 @@
                    <label class="btn btn-primary m-3" for="btn-check-2">RESET</label>
                  </div><!---button div ends-->
                 </div><!---column div ends-->
+                <div class="col-sm-3"></div>
                 </div><!---row div ends-->
       
             </div> <!---container div ends-->
