--- a/blogPort.html
+++ b/blogPort.html
@@ -43,7 +43,7 @@
     <div class="container bg-success">
       
       <div class="title text-center text-white">
-        <h2 class="font-weight-bolder bg-secondary">BLOGS</h2>
+        <h2 class="font-weight-bolder">BLOGS</h2>
       </div><!--title div ends-->
       <div class="row g-5">
         <div class="col-sm-10 col-lg-6 p-3">
